# HTTPServerLab

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  a.out  main.cpp  КП62_ЛР8_Лук'янець_Михайло.docx
include/: Chemical.h  processor.h
scripts/: install-libprogbase.sh
src/: Chemical.cpp  processor.cpp
